# space-pong

./: Pong.sln  Pong.vcxproj  Pong.vcxproj.filters  README.md  main.cpp
src/: AI.h  CMakeLists.txt  Paddle.h  README.md  Scale.h  Text.h  main.cpp
